# Toettchlab-FBC

./: .gitignore  README.md  pyclm_config.toml  pyproject.toml  test_pyclm.py
experiment_scripts/1000x/: tracking_patterns.py
experiment_scripts/drosophila/: embryo_axis_models.py
experiment_scripts/kelsey_erk/: intensity_and_duty_cycles.py
experiment_scripts/mdck/: rotations.py  speed_comparison.py  timescales.py
experiment_scripts/rpe_rotations/: rotations.py
experiment_scripts/test_experiments/: game_of_life.py  test_pyclm_runs.py
notebooks/: segment_embryo.ipynb
scratch-notebooks/: beena_quick_analysis.ipynb  calibration.ipynb  cc_masks_no_nuclei.ipynb  cc_nc_ratios.ipynb  density_gradient.ipynb  game_of_life_test.ipynb  meshgrid.ipynb  post_tracking_analysis.ipynb  segment_embryo.ipynb  workshop_analysis_template.ipynb
tracking_scripts/: BCL_segment_and_track.ipynb  CC_segment_and_track.ipynb  KF_segment_and_track.ipynb  general_segment_and_track.ipynb  workshop_segment_and_track.ipynb
