[project]
name = "toettchlab-fbc"
version = "0.1.0"
description = "toettchlab feedback control"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyclm",
    "tifffile",
    "scikit-image",
    "matplotlib",
    "laptrack>=0.17.0",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
pyclm = { path = "../FeedbackControl", editable = true }
